# openQA-python-client

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ci.requires  epel7.ci.requires  epel7.requires  pyproject.toml  release.sh  setup.py  tests.requires  tox.ini
.github/workflows/: tox.yml
openqa_client/: __init__.py  client.py  const.py  exceptions.py
src/openqa_client/: __init__.py  client.py  const.py  exceptions.py
tests/: conftest.py  test_client.py
