[build-system]
requires = ["setuptools>=40.6.0", "setuptools-git", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
source = ["openqa_client"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.black]
# don't @ me, Hynek
line-length = 100
