[project]
name = "openqa_client"
version = "4.2.1"
authors = [
    { name="Adam Williamson", email="awilliam@redhat.com" },
]
description = "Python client library for openQA API"
readme = "README.md"
license = { file="COPYING" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
keywords = ["openqa", "opensuse", "fedora", "client"]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/os-autoinst/openQA-python-client"
"Bug Tracker" = "https://github.com/os-autoinst/openQA-python-client/issues"

[build-system]
requires = ["setuptools>=40.6.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
source = ["openqa_client"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.black]
# don't @ me, Hynek
line-length = 100

[tool.setuptools.dynamic]
dependencies = { file = ["install.requires"] }
